# SBEngine

./: CMakeLists.txt  README.md  compile.bat  cube.h  main.cpp  mingw32-compile.bat  readme.md  readme.txt  shader.hpp  sphere_m.h
App/resources/models/: bflyscrew.mtl
App/shaders/: default_fs.glsl  default_vs.glsl  marker_fs.glsl  marker_vs.glsl  planet_fs.glsl  planet_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
Release/: fs.glsl  fs_skybox.glsl  fs_sphere.glsl  fs_sun.glsl  vs_sphere.glsl
fs/: default.glsl  planet.glsl  skybox.glsl  sphere.glsl
source/: CMakeLists.txt  camera.cpp  camera.hpp  common.hpp  cube.c  cube.h  h.txt  inc.rsp  main.cpp  misc.h  misc.hpp  object.cpp  object.hpp  physics.cpp  physics.h  physics.hpp  shader.cpp  shader.hpp  skybox.c  skybox.h  sph.c  sph.h  sphere_m.h  sphs.c  sphs.h
source/app/: argparser.cpp  argparser.hpp  callbacks.cpp  callbacks.hpp  graphics.cpp  graphics.hpp  main.cpp
source/models/: skybox.h  sph.c  sph.h
source/runtime/: camera.cpp  camera.hpp  glUtil.c  glUtil.h  localMath.cpp  localMath.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  print.cpp  print.hpp  sbObject.cpp  sbObject.hpp  shader.cpp  shader.hpp  stb_image.c  world.cpp  world.hpp
source/v0.2.2/: cube.h  main.cpp  shader.hpp  skybox.h  sphere_m.h
vs/: sphere.glsl
